# vocalexp_gst

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  vocalexp_debug.csv
notebooks/: vocalexp_tutorial.ipynb
src/dsp/: envelope_extractor.cpp  envelope_extractor.hpp  expressivity_mapper.cpp  expressivity_mapper.hpp  fft.cpp  fft.hpp  phase_vocoder.cpp  phase_vocoder.hpp  pitch_tracker.cpp  pitch_tracker.hpp  rubberband_stretcher.cpp  rubberband_stretcher.hpp  swift_pitch_tracker.cpp  swift_pitch_tracker.hpp  vocal_expressivity_processor.cpp  vocal_expressivity_processor.hpp  window.hpp
src/gst/: gstvocalexp.cpp  gstvocalexp.hpp
tests/: test_envelope_extractor.cpp  test_expressivity_mapper.cpp  test_fft.cpp  test_gst_element.cpp  test_helpers.hpp  test_phase_vocoder.cpp  test_pitch_tracker.cpp  test_processor.cpp
tools/: analyze_vocalexp.py  inspect_onnx.cpp  pitch_compare.cpp  vocalexp-demo.cpp
